Update app configuration and assets for improved branding and EAS integration
- Changed app name and slug for better branding.
- Updated user interface style to dark mode.
- Modified splash screen image and background color.
- Added iOS bundle identifier and encryption settings.
- Updated Android package name and adaptive icon settings.
- Introduced new eas.json for build and submission configurations.
- Added new splash image asset and updated app icon.

--- a/app.json
+++ b/app.json
@@ -1,29 +1,43 @@
 {
   "expo": {
-    "name": "in_the_dark_new",
-    "slug": "in_the_dark_new",
+    "name": "In The Dark",
+    "slug": "in-the-dark",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
-    "userInterfaceStyle": "light",
+    "userInterfaceStyle": "dark",
     "newArchEnabled": true,
     "splash": {
-      "image": "./assets/splash-icon.png",
+      "image": "./assets/splash.png",
       "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
+      "backgroundColor": "#1a1a1a"
     },
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.nicoaraujo.inthedark",
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false
+      }
     },
     "android": {
       "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#ffffff"
+        "foregroundImage": "./assets/splash.png",
+        "backgroundColor": "#1a1a1a"
       },
-      "edgeToEdgeEnabled": true
+      "edgeToEdgeEnabled": true,
+      "package": "com.nicoaraujo.inthedark"
     },
     "web": {
       "favicon": "./assets/favicon.png"
-    }
+    },
+    "extra": {
+      "eas": {
+        "projectId": "404238d5-6ed1-41c3-b7a4-8e76d28914d2"
+      }
+    },
+    "owner": "stout6370"
   }
 }
