Add build and submission scripts to package.json and enhance README documentation for EAS integration
- Added npm scripts for building iOS and Android apps and submitting to TestFlight.
- Updated README to include detailed instructions for building and submitting the app using EAS.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "build:ios": "eas build -p ios --profile preview",
+    "build:android": "eas build -p android --profile preview",
+    "submit:testflight": "eas submit -p ios --latest --profile preview"
   },
   "dependencies": {
     "@react-navigation/native": "^7.1.8",
