--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "build:ios": "eas build -p ios --profile preview",
     "build:ios-production": "eas build -p ios --profile production",
     "build:android": "eas build -p android --profile preview",
-    "submit:testflight": "eas submit -p ios --latest"
+    "submit:testflight": "eas submit -p ios"
   },
   "dependencies": {
     "@react-navigation/native": "^7.1.8",
