--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "build:ios": "eas build -p ios --profile preview",
     "build:ios-production": "eas build -p ios --profile production",
     "build:android": "eas build -p android --profile preview",
-    "submit:testflight": "eas submit -p ios"
+    "submit:testflight": "eas submit -p ios",
+    "test": "jest"
   },
   "dependencies": {
     "@react-navigation/native": "^7.1.9",
@@ -26,7 +27,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@types/jest": "^29.5.14",
     "@types/react": "~19.0.10",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.3.4",
     "typescript": "~5.8.3"
   },
   "private": true
